# ProjetoMidgard

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MidgardStudio.spec  README.md  START_HERE.md  build_executable.py  pyproject.toml
.github/workflows/: ci.yml
project/: AI_MEMORY.md  CURRENT_STATE.md  NEXT_TASK.md  PROJECT_CONTEXT.md  PROJECT_HISTORY.md
src/midgard/: __init__.py  __main__.py  application.py  logging_setup.py  profile.py  settings.py
src/midgard/runtime/: __init__.py  anomaly.py  combat.py  consumables.py  discord.py  engine.py  evasion.py  heal.py  input.py  launcher.py  loot.py  navigation.py  pathfinding.py  protocol.py  stash.py
src/midgard/ui/: __init__.py  main_window.py  pages.py  picker.py  theme.py
src/midgard/vision/: __init__.py  capture.py  detector.py  ocr.py
tests/: conftest.py  test_advanced_features.py  test_anomaly.py  test_antidetect_alarms.py  test_application.py  test_automation.py  test_combat.py  test_combat_opencv.py  test_consumables.py  test_custom_plugins.py  test_gui_diagnostics.py  test_gui_picker.py  test_gui_rules.py  test_gui_runtime.py  test_hunt_zones.py  test_looting.py  test_mesh_navigation.py  test_multimap_charts.py  test_navigation.py  test_npc_selling.py  test_ocr_parser.py  test_package.py  test_pathfinding_evasion.py  test_polishments.py  test_polymorphic_discord.py  test_profile.py  test_runtime.py  test_settings.py  test_stash.py  test_vision.py  test_visual_detector.py  test_window_binding.py
