[project]
name = "midgard"
version = "0.2.0"
description = "Graphical foundation for the Midgard Studio desktop application."
readme = "README.md"
requires-python = ">=3.12,<3.13"
license = "MIT"
authors = [{ name = "Project Midgard contributors" }]
dependencies = [
    "PySide6>=6.8,<7",
]

[project.scripts]
midgard-studio = "midgard.application:main"

[build-system]
requires = ["hatchling>=1.27,<2"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8,<10",
    "ruff>=0.11,<1",
]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
addopts = ["-ra", "--strict-config", "--strict-markers"]
testpaths = ["tests"]
pythonpath = ["src"]
